# Embedded-ros-project

./: README.md
imu-turtle-control/: ArduinoIMU.cpp  CMakeLists.txt  ControlTurtle.cpp  I2C_Scanner.cpp
ros-pub-sub-communication/: CMakeLists.txt  Controltortuga.cpp  PublisherNode.py  SubscriberNode.cpp
